---
source: compiler-core/src/fsharp/tests/numbers.rs
expression: "\nconst i = 100.001e523\nconst j = -100.001e-523\n\nconst k = 100.001e1_230\nconst l = -100.001e-1_230\n\nconst m = 100.001e123_456_789\nconst n = -100.001e-123_456_789\n\npub fn foo() {\n  i\n  j\n  k\n  l\n  m\n  n\n}\n"
---
module rec my.``mod``
[<Literal>]
let private i = 100.001e523
[<Literal>]
let private j = -100.001e-523
[<Literal>]
let private k = 100.001e1_230
[<Literal>]
let private l = -100.001e-1_230
[<Literal>]
let private m = 100.001e123_456_789
[<Literal>]
let private n = -100.001e-123_456_789
let foo (): float = begin
    i
    j
    k
    l
    m
    n
end
